rs/embedders/tests/snapshots/instrumentation__metering_mixed_imports.snap
---
source: wasm_utils/tests/instrumentation.rs
expression: out
---
(module
  (type (;0;) (func (param i32 i32) (result i32)))
  (type (;1;) (func (param i64)))
  (type (;2;) (func))
  (type (;3;) (func (result i64)))
  (type (;4;) (func (param i32) (result i32)))
  (import "__" "out_of_instructions" (func (;0;) (type 2)))
  (import "__" "update_available_memory" (func (;1;) (type 0)))
  (import "teat" "adf" (global (;0;) i64))
  (func (;2;) (type 0) (param i32 i32) (result i32)
    global.get 1
    i64.const 3
    i64.sub
    global.set 1
    global.get 1
    i64.const 0
    i64.lt_s
    if  ;; label = @1
      call 0
    end
    local.get 0
    local.get 1
    i32.add)
  (func (;3;) (type 1) (param i64)
    local.get 0
    global.set 1)
  (func (;4;) (type 3) (result i64)
    global.get 1)
  (func (;5;) (type 4) (param i32) (result i32)
    global.get 1
    local.get 0
    i64.extend_i32_u
    i64.lt_s
    if  ;; label = @1
      call 0
    end
    global.get 1
    local.get 0
    i64.extend_i32_u
    i64.sub
    global.set 1
    local.get 0)
  (global (;1;) (mut i64) (i64.const 0))
  (export "addTwo" (func 2))
  (export "canister counter_set" (func 3))
  (export "canister counter_get" (func 4))
  (export "canister counter_instructions" (global 1)))

